--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,11 @@
   box-shadow: 10px 0px 5px rgb(255, 255, 255);
   transition: all 0.5s ease;
 }
+.image-link {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 100%;
+    height: 60%;
+}
